# sci-toolbox

./: .gitignore  CMakeLists.txt  README.md  TODO.md
apps/: CMakeLists.txt  interpol_app.cpp  stat_app.cpp
datasets/: iris.csv  iris.json
include/: CardinalCubicSpline.hpp  GslPolynomialInterpolator.hpp  Interpolator.hpp  LinearInterpolator.hpp  NewtonInterpolator.hpp  dataframe.hpp
output/: csvanalisis.txt  janalisis.txt
src/: CMakeLists.txt  CardinalCubicSpline.cpp  DataFrame.cpp  GslPolynomialInterpolator.cpp  Interpolator.cpp  LinearInterpolator.cpp  NewtonInterpolator.cpp  dataframe.cpp  dataframe.hpp
